--- a/css/custom.css
+++ b/css/custom.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Roboto:wght@300;400;500;700&display=swap');
 
 @import url('header.css');
 @import url('footer.css');
 
 :root{
     --font: 'Roboto',sans-serif;
+    --font2: 'Libre Baskerville', serif;;
     --baseTextSize: 16px;
     --h1Size: 42px;
     --h2Size: 36px;
@@ -141,7 +142,24 @@ iframe{max-width: 100%;}
     animation-name: fadeInDown;
     animation-delay: 0.3s;
 }
-
+.slide-content .different-font {
+    font-size: var(--h5Size);
+    color: #213b81;
+    background: rgb(255 255 255 / 68%);
+    display: inline-block;
+    padding: 5px 10px;
+    font-family: var(--font2);
+    font-style: italic;
+    border-radius: 5px;
+}
+.owl-item.active .different-font {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    animation-name: fadeIn;
+    animation-delay: 0.3s;
+}
 .section-sapce{
     padding: 90px 0;
 }
@@ -449,11 +467,12 @@ iframe{max-width: 100%;}
     display: flex;
     box-shadow: 0px 30px 60px 0px rgb(0 0 0 / 10%);
     margin-bottom: 20px;
+    min-height: 190px;
 }
 .wcu-item .icon{
     width: 70px;
     height: 70px;
-    margin: 0 15px 0;
+    margin: 0 15px 0 0;
     border-radius: 50%;
     display: flex;
     align-items: center;
