--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,4 @@
 @media (max-width: 1199px) {
-    #home-slider .item img{ max-height: 500px; }
     .about-image{ width: 460px; height: 460px; }
     .home-about h3{ font-size: 30px; line-height: 34px; }
     .home-vision-mission:before{ width: 100%; }
@@ -11,6 +10,7 @@
     .wcu-item{min-height: auto;}
 }
 @media (max-width: 991px) {
+    .inner-banner .slide-content{padding-top: 0;}
     #home-slider .item img { max-height: 400px; }
     #home-slider .slide-content{ text-align: center; }
     .slide-content .slide-head{ font-size: 36px; }
@@ -28,6 +28,10 @@
 }
 
 @media (max-width: 767px){
+    #home-slider .owl-nav button{width: 30px; height: 30px;font-size: 16px;}
+    #home-slider .owl-nav button.owl-prev { left: 10px; }
+    #home-slider .owl-nav button.owl-next { right: 10px; }
+    #home-slider .slide-content { padding: 0 20px; }
     .slide-content .slide-head { font-size: 30px; line-height: 34px; }
     .slide-content p{ font-size: 16px; }
     .footer-item{ margin-bottom: 30px; }
