--- a/css/custom.css
+++ b/css/custom.css
@@ -505,7 +505,11 @@ iframe{max-width: 100%;}
     text-align: center;
 }
 .wcu-img-wrapper img{
-    max-width: 100%;
+    width: 350px;
+    height: 350px;
+    border-radius: 50%;
+    margin: 0 auto;
+    object-fit: cover;
 }
 .wcu-img-wrapper::before{
     content: '';
@@ -747,4 +751,28 @@ textarea.form-control{
     font-size: 20px;
     line-height:  24px;
     padding-right: 10px;
+}
+
+.list-boxes{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+.list-boxes p{
+    background: var(--bs-gray-100);
+    border-radius: 5px;
+    padding: 5px 10px 10px 55px;
+    font-size: var(--h5Size);
+    font-weight: 700;
+    width: calc(100% / 3.5);
+    position: relative;
+}
+.list-boxes p:before {
+    content: '\e876';
+    font-family: 'Material Icons Round';
+    color: var(--themeColor);
+    font-size: 24px;
+    position: absolute;
+    left: 10px;
 }
