--- a/css/header.css
+++ b/css/header.css
@@ -72,6 +72,83 @@
     color: var(--themeColor);
 }
 
+.navbar-toggler{
+    width: 50px;
+    height: 35px;
+    position: relative;
+    border: none;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+}
+.navbar-toggler:focus{
+    box-shadow: none;
+}
+
+.navbar-toggler span{
+    display: block;
+    position: absolute;
+    height: 5px;
+    width: 100%;
+    background: var(--themeColor);
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+}
+
+.navbar-toggler span:nth-child(1) {
+    top: 0px;
+}
+
+.navbar-toggler span:nth-child(2),
+.navbar-toggler span:nth-child(3) {
+    top: 14px;
+}
+
+.navbar-toggler span:nth-child(4) {
+    top: 28px;
+}
+
+.navbar-toggler[aria-expanded="true"] span:nth-child(1) {
+    top: 14px;
+    width: 0%;
+    left: 50%;
+}
+
+.navbar-toggler[aria-expanded="true"] span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.navbar-toggler[aria-expanded="true"] span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+.navbar-toggler[aria-expanded="true"] span:nth-child(4) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
+}
+
 /* sticky header */
 .main-header.sticky{
     position: fixed;
@@ -97,8 +174,8 @@
 @media (max-width: 991px){
     .main-header{position: relative;}
     .main-nav .navbar .navbar-collapse .nav-link { color: var(--headingColor); }
-    .main-nav .navbar .navbar-collapse { justify-content: end; position: fixed; width: 100%; top: 130px; left: 0; background: #fff; z-index: 99; text-align: center; }
-    .main-header.sticky .main-nav .navbar .navbar-collapse { top: 80px; box-shadow: 0 7px 5px 0 rgb(0 0 0 / 13%); }
+    .main-nav .navbar .navbar-collapse { justify-content: end; position: fixed; width: 100%; top: 119px; left: 0; background: #fff; z-index: 99; text-align: center; }
+    .main-header.sticky .main-nav .navbar .navbar-collapse { top: 63px; box-shadow: 0 7px 5px 0 rgb(0 0 0 / 13%); }
 }
 @media (max-width: 599px){
     .main-nav .navbar .navbar-collapse{ top: 152px; }
