--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,8 +4,8 @@
     .home-vision-mission:before{ width: 100%; }
     .vm-content { padding: 90px 30px 30px; }
     .vm-image { margin-top: 0; padding: 0 30px; }
-    .hiw-item{ margin-bottom: 24px; }    
-    .navbar-expand-lg{ justify-content: end; }
+    .home-hiw .col-md-6.col-xl-3{ margin-bottom: 24px; }    
+    .navbar-expand-lg{ justify-content: end; padding: 0;}
 
     .wcu-item{min-height: auto;}
 }
@@ -25,9 +25,12 @@
     .about-content { padding-right: 0; }
 
     iframe { width: 100%; }
+
+    .list-boxes p{ width: calc(100% / 2.5)}
 }
 
 @media (max-width: 767px){
+    .container, .container-sm { max-width: 100%; }
     #home-slider .owl-nav button{width: 30px; height: 30px;font-size: 16px;}
     #home-slider .owl-nav button.owl-prev { left: 10px; }
     #home-slider .owl-nav button.owl-next { right: 10px; }
@@ -45,6 +48,8 @@
     .contact-page .col-md-6:first-of-type{order: 2;}
     .contact-page .col-md-6:last-of-type{order: 1;}
     .contact-page iframe {height: 300px;}
+
+    .list-boxes p{ width: 100%}
 }
 @media (max-width: 599px){
     .toplink ul{padding: 0;flex-wrap: wrap;}
