--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,6 +36,7 @@
     #home-slider .owl-nav button.owl-next { right: 10px; }
     #home-slider .slide-content { padding: 0 20px; }
     .slide-content .slide-head { font-size: 30px; line-height: 34px; }
+    .slide-content .different-font{font-size: 18px;}
     .slide-content p{ font-size: 16px; }
     .footer-item{ margin-bottom: 30px; }
     .footer-item .address p br{ display: none; }
@@ -57,6 +58,7 @@
     .slide-content .sub-head, .slide-content .bottom-head{font-size: 18px;}
     .slide-content .slide-head { font-size: 24px; line-height: 28px; }
     .slide-content p { font-size: 14px; }
+    .slide-content .different-font { font-size: 16px; }
     .home-about h3 { font-size: 24px; line-height: 28px; }
     .exp-year{padding: 15px 10px 10px 12px;width: 100%;}
     .sec-heading { font-size: 30px; line-height: 34px; }
