--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,6 +8,7 @@
     .navbar-expand-lg{ justify-content: end; padding: 0;}
 
     .wcu-item{min-height: auto;}
+    .wcu-img-wrapper{margin-bottom: 20px;}
 }
 @media (max-width: 991px) {
     .inner-banner .slide-content{padding-top: 0;}
