--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;500;700&display=swap');
-@import url("https://use.typekit.net/biq4alt.css");
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Noto+Sans+Georgian:wght@400;500;700&display=swap');
+@import url('flaticon.css');
 @import url('header.css');
 @import url('footer.css');
 
 :root{
     --font: 'Noto Sans Georgian', serif;
-    --font2: filicudi-solid, sans-serif;
+    --font2: 'Acme', sans-serif;
     --baseTextSize: 16px;
     --h1Size: 42px;
     --h2Size: 36px;
@@ -798,4 +798,53 @@ textarea.form-control{
     font-size: 24px;
     position: absolute;
     left: 10px;
+}
+
+.serv-item{
+    box-shadow: 0 10px 20px rgb(0 0 0 / 4%);
+    text-align: center;
+    border-radius: 8px;
+    overflow: hidden;
+    background: var(--bs-body-bg);
+    height: 100%;
+}
+.serv-item figure{
+    padding: 13px;
+    margin: 0;
+}
+.serv-item figure img{
+    height: auto;
+    max-width: 100%;
+    border-radius: 8px;
+}
+
+.serv-content{
+    position: relative;
+    padding: 50px 20px 20px;
+}
+
+.serv-icon{
+    height: 80px;
+    width: 80px;
+    font-size: 40px;
+    line-height: 80px;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--bs-body-bg);
+    background: var(--themeColor);
+    position: absolute;
+    top: -50%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    box-shadow: 0 0 20px rgb(0 0 0 / 16%);
+}
+
+.serv-item figcaption{
+    font-size: 20px;
+    line-height: 34px;
+    margin-top: 0;
 }
