--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,5 @@
 @media (max-width: 1399px) {
+    .list-boxes p{font-size: 18px;}
     .about-image{ width: 550px; height: 550px; }
     .vm-content { padding: 40px 30px 40px; }
     .vm-item p { font-size: 16px; }
