--- a/css/custom.css
+++ b/css/custom.css
@@ -855,7 +855,7 @@ textarea.form-control{
 
 .thank-you{
     width: 100%;
-    min-height: 100vh;
+    padding: 50px 0;
 }
 .thank-you span{
     font-size: calc(var(--h1Size) * 2);
@@ -865,8 +865,9 @@ textarea.form-control{
 .thank-you h3{
     font-family: var(--font2);
     font-size: var(--h1Size);
-    font-weight: 700;
-    color: var(--themeColor);
+    /* font-weight: 700; */
+    color: var(--bs-dark);
+    margin-top: 30px;
 }
 .thank-you p{
     margin: 30px 0;
