--- a/css/header.css
+++ b/css/header.css
@@ -6,6 +6,9 @@
     z-index: 999;
     border-bottom: solid 1px rgb(255 255 255 / 16%);
 }
+.main-header.ty-header{
+    position: relative;
+}
 /* Topbar */
 .topbar {
     padding: 8px 0;
@@ -72,11 +75,15 @@
     color: var(--themeColor);
 }
 
+.main-nav .row{
+    align-items: center;
+}
 .navbar-toggler{
-    width: 50px;
-    height: 35px;
+    width: 30px;
+    height: 20px;
     position: relative;
     border: none;
+    padding: 0;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     -o-transform: rotate(0deg);
@@ -94,7 +101,7 @@
 .navbar-toggler span{
     display: block;
     position: absolute;
-    height: 5px;
+    height: 3px;
     width: 100%;
     background: var(--themeColor);
     border-radius: 9px;
@@ -116,15 +123,15 @@
 
 .navbar-toggler span:nth-child(2),
 .navbar-toggler span:nth-child(3) {
-    top: 14px;
+    top: 9px;
 }
 
 .navbar-toggler span:nth-child(4) {
-    top: 28px;
+    top: 18px;
 }
 
 .navbar-toggler[aria-expanded="true"] span:nth-child(1) {
-    top: 14px;
+    top: 12px;
     width: 0%;
     left: 50%;
 }
@@ -144,7 +151,7 @@
 }
 
 .navbar-toggler[aria-expanded="true"] span:nth-child(4) {
-    top: 18px;
+    top: 16px;
     width: 0%;
     left: 50%;
 }
@@ -169,6 +176,10 @@
 }
 .main-header.sticky .main-nav .logo img{
     max-height: 55px;
+}
+
+.ty-header .main-nav .navbar .navbar-collapse .nav-link {
+    color: var(--headingColor);
 }
 
 @media (max-width: 991px){
