--- a/css/responsive.css
+++ b/css/responsive.css
@@ -62,6 +62,9 @@
     .list-boxes p{ width: 100%}
 
     .inner-banner .slide-content .slide-head{margin: 0;}
+
+    .thank-you img{max-width: 80px;}
+    .thank-you h3{font-size: var(--h2Size);}
 }
 @media (max-width: 599px){
     .toplink ul{padding: 0;flex-wrap: wrap;}
@@ -84,4 +87,5 @@
     .exp-year small { font-size: 16px;}
 
     .contact-page iframe {height: 250px;}
+    
 }
