--- a/css/custom.css
+++ b/css/custom.css
@@ -856,23 +856,46 @@ textarea.form-control{
     background-color: rgb(0 0 0 / 40%);
 }
 .thank-you{
+    height: 100vh;
     width: 100%;
-    padding: 50px 0;
+    padding: 40px 0;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+}
+.thank-you:before {
+    content: '';
+    background: rgb(0 0 0 / 70%);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
 }
 .thank-you span{
     font-size: calc(var(--h1Size) * 2);
     color: var(--themeColor);
     margin-bottom: 30px;
 }
+.thank-you img{
+    max-width: 366px;
+    width: 90%;
+}
 .thank-you h3{
     font-family: var(--font2);
     font-size: var(--h1Size);
     /* font-weight: 700; */
-    color: var(--bs-dark);
-    margin-top: 30px;
+    color: var(--bs-body-bg);
+    margin-top: 20px;
 }
 .thank-you p{
-    margin: 30px 0;
+    margin: 10px 0 30px 0;
+    color: var(--bs-body-bg);
+    font-size: 24px;
+    line-height: normal;
 }
 
 
